# refDecontam

./: .gitmodules  CMakeLists.txt  README.md
data/kfs/: kfs.namesMap  kfs.phmap  kfscolorTableConfig.json  kfscolors.intvectors
data/kfs/kfs/: 10k_1.fq.phmap  10k_2.fq.extra  10k_2.fq.phmap
data/test_decontam/: 10_transcript.fasta  cont2.fasta  sketches.namesMap  sketches.phmap  sketchescolors.intvectors
data/test_decontam/sketches/: cont1.fasta.extra  cont2.fasta.phmap
data/test_decontam/test/: cont1.fasta  genome_cont1.fasta_partition.fa  genome_cont2.fasta_partition.fa  run.sh  unmapped_partition.fa
data/test_decontam/test/sketches/: cont1.fasta.phmap
src/: decontam_by_sketches.cpp  ref_cont.cpp  test.cpp
